# ros-imc-broker

./: .gitignore  README.md  start.bash
docker/: Dockerfile  docker.bash
docker/assets/: backseat.ini
workspace/src/ros_imc_broker/: CMakeLists.txt  package.xml
workspace/src/ros_imc_broker/cfg/: BrokerParams.cfg
workspace/src/ros_imc_broker/cmake/: FindDUNE.cmake
workspace/src/ros_imc_broker/include/IMC/Base/: ByteBuffer.hpp  Packet.hpp  Parser.hpp
workspace/src/ros_imc_broker/include/IMC/Spec/: Abort.hpp  Aborted.hpp  Acceleration.hpp  AcousticLink.hpp  AcousticMessage.hpp  AcousticOperation.hpp  AcousticSystems.hpp  AcousticSystemsQuery.hpp  AirSaturation.hpp  Airflow.hpp  Alignment.hpp  AlignmentState.hpp  AllMessages.hpp  AllocatedControlTorques.hpp  AngularVelocity.hpp  Announce.hpp  AnnounceService.hpp  ApmStatus.hpp  AutonomousSection.hpp  AutopilotMode.hpp  BeamConfig.hpp  Bitfields.hpp  Blob.hpp  Brake.hpp  ButtonEvent.hpp  CacheControl.hpp  Calibration.hpp  CameraZoom.hpp  CcuEvent.hpp  Chlorophyll.hpp  ClockControl.hpp  CloseSession.hpp  Collision.hpp  ColoredDissolvedOrganicMatter.hpp  CommsRelay.hpp  CompassCalibration.hpp  CompressedHistory.hpp  CompressedImage.hpp  Conductivity.hpp  Constants.hpp  (+266 more)
workspace/src/ros_imc_broker/include/ros_imc_broker/: Broker.hpp  FollowReferenceController.hpp  ImcTypes.hpp  Mappings.hpp  SimpleController.hpp  TcpLink.hpp
workspace/src/ros_imc_broker/launch/: simulator.launch
workspace/src/ros_imc_broker/src/: broker_node.cpp  follow_reference_node.cpp  params_changer_node.cpp
workspace/translator/: type.hpp  (+2 more)
(+134 files in other folders)
