<?xml version="1.0"?>
<package>
  <name>ros_imc_broker</name>
  <version>0.0.1</version>
  <description>ROS IMC Broker</description>
  <maintainer email="rasm@oceanscan-mst.com">Ricardo Martins</maintainer>
  <author email="rasm@oceanscan-mst.com">Ricardo Martins</author>
  <license>GPLv2</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <export>
  </export>
</package>
